Fix header icon overlap

--- a/src/top-bar.css
+++ b/src/top-bar.css
@@ -94,10 +94,8 @@ body {
 @container body style(--top-bar-button-position: titlebar) {
     #app-mount {
         --custom-channel-header-height: calc(var(--guildbar-avatar-size) + var(--space-xs) + var(--border-thickness) * 2);
-        /* --top-bar-right-margin: calc(32px + var(--space-xs)); */
         --top-bar-right-margin: calc(32px + var(--space-xs));
     }
-
     .title_c38106,
     .trailing_c38106 > a[href='https://support.discord.com'] {
         display: none;
@@ -162,15 +160,31 @@ body {
     .base__5e434:has(.notice__6e2b9) > .bar_c38106 > .trailing_c38106 {
         top: calc(var(--top-bar-height) + 8px + 40px + var(--gap) + var(--border-thickness));
     }
-    .base__5e434:has(.winButtons_c38106) {
-        --top-bar-right-margin: calc(32px + 3 * var(--space-xs) + 6 * var(--window-control-size) + 1px);
+    /* Fix header icon overlap */
+    .base__5e434,
+    .toolbar__9293f {
+        /* Supports up to 6 buttons */
+        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(1)) { --button-count: 1; }
+        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(2)) { --button-count: 2; }
+        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(3)) { --button-count: 3; }
+        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(4)) { --button-count: 4; }
+        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(5)) { --button-count: 5; }
+        &:has(.trailing_c38106 > div:not(.winButtons_c38106):nth-of-type(6)) { --button-count: 6; }
+        
+        &:has(.winButtons_c38106) {
+            --gap-multiplier: 1.8;
+            --top-bar-right-margin: calc(32px * var(--button-count) + (var(--button-count) + var(--gap-multiplier)) * var(--space-xs) + 6 * var(--window-control-size) + 1px) !important;   
+        }
     }
-    .base__5e434:has(.trailing_c38106 > .button__85643) {
+    /* .base__5e434:has(.trailing_c38106 > .button__85643) {
         --top-bar-right-margin: calc(32px * 2 + 2 * var(--space-xs));
-    }
-    .base__5e434:has(.winButtons_c38106):has(.trailing_c38106 > .button__85643) {
+    } */
+    /* .base__5e434:has(.winButtons_c38106) {
+        --top-bar-right-margin: calc(32px + 3 * var(--space-xs) + 6 * var(--window-control-size) + 1px);
+    } */
+    /* .base__5e434:has(.winButtons_c38106):has(.trailing_c38106 > .button__85643) {
         --top-bar-right-margin: calc(32px * 2 + 5 * var(--space-xs) + 6 * var(--window-control-size) + 1px);
-    }
+    } */
     /* .base__5e434:has(.trailing_c38106 > .button__85643:nth-of-type(3)) {
         --top-bar-right-margin: calc(32px * 3 + 3 * var(--space-xs));
     }
